# photo_manager

./: .gitignore  .graphifyignore  AGENTS.md  CONTEXT.md  Cargo.toml  package-lock.json  package.json  tauri.conf.json
capabilities/: main-window.json
graphify-out/: .graphify_analysis.json  .graphify_ast.json  .graphify_detect.json  .graphify_detect.json.utf8  .graphify_extract.json  .graphify_labels.json  .graphify_root  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
graphify-out/cache/: stat-index.7wgadng_.tmp  stat-index.json
gui-frontend/: index.html  package.json  tsconfig.json
gui-frontend/src/: App.css  App.tsx
gui-frontend/src/components/: DestinationTreeSection.tsx  DuplicateCheckBar.css  DuplicateCheckBar.tsx  FormatSection.tsx  ImportModal.css  ImportModal.tsx  MetadataSection.tsx  PhotoGrid.css  PhotoGrid.tsx  PreviewModal.css  PreviewModal.tsx  RightPanel.css  RightPanel.tsx  SingleImageView.tsx  SourceTree.css  SourceTree.tsx  ThumbnailLoader.tsx  Toolbar.css  Toolbar.tsx
gui-frontend/src/hooks/: useDeviceDetection.ts  useDuplicateCheck.ts  useFolderBrowse.ts  useImportFlow.ts  useTestData.ts  useThumbnail.ts  useThumbnailGenerator.ts
gui-frontend/src/stores/: usePhotoStore.ts  useThumbnailQueueStore.ts  useUIStore.ts
gui-frontend/src/styles/: global.css
gui-frontend/src/utils/: applyTemplate.ts
src/: lib.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/graphify-out/cache/: stat-index.json
src/gui/: commands.rs  config.rs
src/import/: copier.rs  dedup.rs  mod.rs  planner.rs
src/media_management/: metadata.rs  mod.rs  storage.rs  template.rs  thumbnail.rs
