[package]
name = "photo_manager"
version = "0.1.0"
edition = "2021"

[lib]
name = "photo_manager"
path = "src/lib.rs"

[[bin]]
name = "photo_manager"
path = "src/main.rs"

[dependencies]
walkdir = "2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
kamadak-exif = "0.5"
sysinfo = "0.30"
image = "0.25"
blake3 = "1.5"
base64 = "0.22"
lazy_static = "1.4"

[target.'cfg(windows)'.dependencies]
tauri = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"

[target.'cfg(not(windows))'.dependencies]
tauri = "2"

[dev-dependencies]
