[package]
name = "photo_manager"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "photo_manager"
path = "src/main.rs"

[lib]
name = "photo_manager_lib"
path = "src/lib.rs"

[dependencies]
walkdir = "2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
kamadak-exif = "0.5"
sysinfo = "0.30"
image = "0.25"
blake3 = "1.5"
base64 = "0.22"
lazy_static = "1.4"
rayon = "1.7"
num_cpus = "1.16"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
dirs = "6.0"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[target.'cfg(windows)'.dependencies]

[target.'cfg(not(windows))'.dependencies]

[dev-dependencies]
